# hornvale

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CREDITS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  WORKFLOW_IMPROVEMENTS_PLAN.md  build.rs  clippy.toml  rm_old_branches.sh
cli/: Cargo.toml
cli/src/: audio.rs  concepts.rs  dictionary.rs  main.rs  phonology.rs  proto.rs  repl.rs  streams.rs  world_builder.rs
cli/tests/: architecture.rs  audio_artifacts.rs  branches_coverage.rs  branches_identity.rs  correspondence.rs  docs_consistency.rs  exit_criterion.rs  eyes_identity.rs  graph_cost.rs  heavy_tier.rs  history_battery.rs  history_render.rs  lens_purity.rs  locale_cli.rs  orrery.rs  release_determinism.rs  scene_moons_cli.rs  sky_exit_criterion.rs  species_identity.rs  tongues_identity.rs  words_identity.rs
cli/tests/fixtures/: pre-branches-seed-42-world.json  pre-eyes-seed-42-default-world.json  pre-eyes-seed-42-goblin-almanac.md  pre-eyes-seed-42-goblin-world.json  pre-species-seed-42-world.json  pre-tongues-seed-42-almanac.md  pre-tongues-seed-42-world.json  pre-words-seed-42-almanac.md  pre-words-seed-42-world.json  world-seed-42.json
clients/vessel/wasm/: Cargo.toml  drive.mjs
clients/vessel/wasm/src/: lib.rs
clients/world-wasm/: Cargo.toml  drive.mjs
clients/world-wasm/src/: lib.rs
crates/astronomy/: Cargo.toml  README.md
crates/astronomy/src/: close_binary_star.rs  constants.rs  distant_binary_star.rs  error.rs  errors.rs  host_star.rs  lib.rs  math.rs  moon.rs  planet.rs  planet_moon_relationship.rs  planetary_system.rs  satellite_system.rs  spectral_type.rs  spectral_type_properties.rs  star.rs  star_system.rs  stellar_neighbor.rs  stellar_neighborhood.rs  terrestrial_planet.rs  traits.rs  types.rs
internal/astronomy/: Cargo.toml  README.md
internal/astronomy/src/: lib.rs
internal/command/: Cargo.toml
internal/command/benches/: scanner-2024-04-15.html  scanner.rs
internal/command/src/: argument.rs  arity.rs  classifier.rs  command.rs  commands.rs  components.rs  context.rs  direction.rs  error.rs  form.rs  function.rs  lib.rs  modifier.rs  object.rs  parameter.rs  parser.rs  query.rs  registry.rs  scanner.rs  syntax.rs  world.rs
internal/parser/: Cargo.toml
internal/parser/benches/: scanner.rs
internal/parser/examples/: playground.rs
internal/parser/src/: adjective.rs  adverb.rs  case.rs  classifier.rs  command.rs  component.rs  demonstrative_determiner.rs  direction.rs  distributive_determiner.rs  error.rs  lib.rs  parser.rs  parsers.rs  possessive_determiner.rs  possessive_pronoun.rs  preposition.rs  pronoun.rs  scanner.rs  token.rs  world.rs
internal/scripting/: Cargo.toml
internal/scripting/examples/: blackpool.rs
internal/scripting/src/: bound_method.rs  chunk.rs  class.rs  closure.rs  compiler.rs  constants.rs  error.rs  function.rs  instance.rs  instruction.rs  instructions.rs  interpreter.rs  local.rs  macros.rs  native_function.rs  parser.rs  scanner.rs  standard_library.rs  string.rs  table.rs  token.rs  value.rs  virtual_machine.rs
internal/scripting/tests/: scripting.rs
internal/test_utilities/: Cargo.toml  README.md
internal/test_utilities/src/: lib.rs
internal/world/: Cargo.toml  README.md
internal/world/examples/: generator.rs
internal/world/src/: bridson.rs  commands.rs  component.rs  corridor.rs  edge.rs  lib.rs  mst.rs  passage.rs  point.rs  query.rs  region.rs  room.rs
src/: core.rs  (+49 more)
tools/earth-mask/: Cargo.toml
tools/earth-mask/src/: main.rs
tools/type-audit/: CLAUDE.md  Cargo.toml
tools/type-audit/src/: args.rs  audit.rs  extract.rs  lib.rs  main.rs  primitives.rs  report.rs  stream_label.rs  tag.rs  walk.rs
tools/type-audit/tests/: bidirectional.rs  report_determinism.rs  stream_label_literal.rs
windows/almanac/: Cargo.toml
windows/almanac/src/: connections.rs  history.rs  lib.rs
windows/almanac/tests/: connections_render.rs  history_render.rs
windows/book/: Cargo.toml
windows/book/src/: lib.rs
windows/explain/: Cargo.toml
windows/explain/src/: lib.rs
windows/lab/: CLAUDE.md  Cargo.toml
windows/lab/src/: blackbox.rs  chart.rs  diff.rs  health.rs  lib.rs  metrics.rs  publish.rs  roster.rs  runner.rs  schema.rs  study.rs  summary.rs  synthetic.rs
windows/lab/tests/: branches_family_calibration.rs  calibration.rs  depth_ladder.rs  earth_anchor.rs  fixture_staleness.rs  gathering_calibration.rs  health_calibration.rs  individuation.rs  preregistration_guard.rs  terminator_acceptance.rs  the_dial.rs  the_doctrine.rs  the_explanations.rs
windows/locale/: Cargo.toml
windows/locale/src/: budget.rs  grammar.rs  lib.rs  micro.rs  regime.rs  streams.rs  substrate.rs
windows/scene/: Cargo.toml
windows/scene/examples/: diurnal_temperature_golden.rs  ephemeris_golden.rs  locked_temperature_golden.rs  region_temperature_golden.rs  temperature_triples.rs
windows/scene/src/: lib.rs  region.rs
windows/scene/tests/: golden.rs  wind_contract.rs
windows/vessel/: Cargo.toml
windows/vessel/src/: agent.rs  focalize.rs  knowledge.rs  lib.rs  liveness.rs  session.rs  streams.rs  vantage.rs
windows/vessel/tests/: liveness_genesis.rs  possession_moves.rs  session.rs  the_first_mark.rs  walker_battery.rs
windows/worldgen/: CLAUDE.md  Cargo.toml
windows/worldgen/examples/: profile_build.rs
windows/worldgen/src/: chorus.rs  components.rs  graph_derive.rs  history_bake.rs  history_emit.rs  lib.rs  render.rs  schedule.rs  settlement_pins.rs  streams.rs  traversal.rs  vestige.rs
windows/worldgen/tests/: beta_calibration_freeze.rs  beta_calibration_sweep.rs  chorus_params.rs  confluence.rs  consonance_properties.rs  deep_grammar.rs  demesne.rs  depth.rs  diachronic.rs  dissolve_equivalence.rs  doctrine.rs  explanations.rs  exposure.rs  graph_byte_identity.rs  graph_derive.rs  history_bake.rs  history_byte_identity.rs  history_emit.rs  history_gates.rs  history_placement.rs  history_sundering.rs  insolation_probe.rs  pin_enumeration.rs  profile.rs  proto_goblinoid_golden.rs  solitary_tongue.rs  species_worlds.rs  traversal.rs
(+2407 files in other folders)
