[workspace]
resolver = "3"
members = ["kernel", "domains/*", "windows/*", "cli"]
exclude = ["tools/type-audit", "tools/earth-mask", "clients/vessel/wasm", "clients/world-wasm"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# libm (decision 0041): portable transcendentals — bit-identical across
# platforms; amends the decision-0004 dependency allowlist.
libm = "0.2"

# TOOL-hot-crate-opt: hornvale-language's tests sweep 1,000-seed language
# evolution; O2 here buys release-grade test speed while every other crate
# keeps fast debug compiles.
[profile.dev.package.hornvale-language]
opt-level = 2

# TOOL-hot-crate-opt: the census probes/guard build full worlds through
# terrain's tectonic/sculpting math on every seed; measured as the largest
# single contributor to fixture_staleness wall time (see commit body).
[profile.dev.package.hornvale-terrain]
opt-level = 2

# TOOL-hot-crate-opt: climate fields are recomputed per world alongside
# terrain in every census probe; measurably shaves further wall time on
# top of the terrain entry (see commit body).
[profile.dev.package.hornvale-climate]
opt-level = 2

# TOOL-hot-crate-opt: worldgen is the composition root that drives every
# domain's world construction; its own glue code adds a small but
# consistent, reproducible speedup on top of the domain crates above (see
# commit body).
[profile.dev.package.hornvale-worldgen]
opt-level = 2
