[package]
name = "hornvale"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale: an experimental text adventure and computational social science sandbox."

[dependencies]
hornvale-kernel = { path = "../kernel" }
hornvale-astronomy = { path = "../domains/astronomy" }
hornvale-climate = { path = "../domains/climate" }
hornvale-culture = { path = "../domains/culture" }
hornvale-religion = { path = "../domains/religion" }
hornvale-settlement = { path = "../domains/settlement" }
hornvale-species = { path = "../domains/species" }
hornvale-terrain = { path = "../domains/terrain" }
hornvale-almanac = { path = "../windows/almanac" }
hornvale-worldgen = { path = "../windows/worldgen" }
hornvale-lab = { path = "../windows/lab" }
hornvale-historiography = { path = "../windows/historiography" }

[dev-dependencies]
serde_json = { workspace = true }
