[package]
name = "hornvale-world-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The catalog: worldgen + scene JSON behind extern-C exports for external clients."

# Standalone workspace (root Cargo.toml excludes this path, like
# clients/vessel/wasm) so this crate owns the size-critical profile.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
hornvale-kernel = { path = "../../kernel" }
hornvale-worldgen = { path = "../../windows/worldgen" }
hornvale-scene = { path = "../../windows/scene" }
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-terrain = { path = "../../domains/terrain" }

[profile.release]
# Vessel's measured profile (decision 0052): ties go to the smaller binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
