[package]
name = "hornvale_astronomy"
description = "Astronomy library for Hornvale"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derivative.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
getrandom.workspace = true
paste.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_test_utilities.workspace = true
