[package]
name = "hornvale_astronomy"
description = "Astronomy library for Hornvale"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
derivative.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
