[package]
name = "hornvale_command"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_test_utilities.workspace = true

[lints]
workspace = true
