[package]
name = "hornvale_parser"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
hecs.workspace = true
hornvale_command.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_test_utilities.workspace = true
