[package]
name = "hornvale_parser"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[[bench]]
name = "scanner"
harness = false

[dependencies]
criterion.workspace = true
derivative.workspace = true
derive_more.workspace = true
hecs.workspace = true
hornvale_command.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_dictionary.workspace = true
hornvale_test_utilities.workspace = true
hornvale_world.workspace = true
