[package]
name = "hornvale_test_utilities"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
all_asserts.workspace = true
assert_approx_eq.workspace = true
criterion.workspace = true
log.workspace = true
pretty_assertions.workspace = true
pretty_env_logger.workspace = true
