[package]
name = "hornvale_world"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
getrandom.workspace = true
hecs.workspace = true
hornvale_test_utilities.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
