[package]
name = "hornvale_world"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
getrandom.workspace = true
hecs.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_test_utilities.workspace = true
