[package]
name = "hornvale_world"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derivative.workspace = true
derive_more.workspace = true
getrandom.workspace = true
hornvale_core.workspace = true
hecs.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
hornvale_command.workspace = true
hornvale_input.workspace = true
hornvale_test_utilities.workspace = true
hornvale_parser.workspace = true
