# Empty table: type-audit is a deliberately out-of-workspace dev tool
# (decision `non-workspace-dev-tools-may-use-parser-libraries`). Declaring it
# its own workspace root keeps `--manifest-path` builds standalone even when
# the repo is checked out as a git worktree nested inside the parent tree
# (e.g. `.claude/worktrees/*`), where the parent Cargo.toml's `exclude` path
# no longer matches.
[workspace]

[package]
name = "type-audit"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "type_audit"
path = "src/lib.rs"

[[bin]]
name = "type-audit"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
# `span-locations` makes `Span::start().line` return real line numbers when
# parsing files (outside a proc-macro); without it, diagnostics report `:0:`.
proc-macro2 = { version = "1", features = ["span-locations"] }
