[package]
name = "hornvale-almanac"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale almanac window: generated world documents."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-climate = { path = "../../domains/climate" }
hornvale-terrain = { path = "../../domains/terrain" }
hornvale-settlement = { path = "../../domains/settlement" }
hornvale-culture = { path = "../../domains/culture" }
hornvale-religion = { path = "../../domains/religion" }
hornvale-species = { path = "../../domains/species" }
