[package]
name = "hornvale-book"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale book window: render a world's committed is-a facts as Common sentences."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-language = { path = "../../domains/language" }

[dev-dependencies]
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-terrain = { path = "../../domains/terrain" }
hornvale-worldgen = { path = "../worldgen" }
