[package]
name = "hornvale-book"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale book window: render a world's committed classification facts (is-a, instance-of) as Common sentences."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-language = { path = "../../domains/language" }
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-worldgen = { path = "../worldgen" }

[dev-dependencies]
hornvale-terrain = { path = "../../domains/terrain" }
