[package]
name = "hornvale-explain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale explain window: narrate a world's derivation from its ledger."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-astronomy = { path = "../../domains/astronomy" }
