[package]
name = "hornvale-lab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale laboratory: batch studies over generated worlds."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-worldgen = { path = "../worldgen" }
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-religion = { path = "../../domains/religion" }
serde = { workspace = true }
serde_json = { workspace = true }
