[package]
name = "hornvale-lab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale laboratory: batch studies over generated worlds."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-worldgen = { path = "../worldgen" }
hornvale-vessel = { path = "../vessel" }
hornvale-locale = { path = "../locale" }
hornvale-astronomy = { path = "../../domains/astronomy" }
hornvale-terrain = { path = "../../domains/terrain" }
hornvale-climate = { path = "../../domains/climate" }
hornvale-religion = { path = "../../domains/religion" }
hornvale-settlement = { path = "../../domains/settlement" }
hornvale-demography = { path = "../../domains/demography" }
hornvale-culture = { path = "../../domains/culture" }
hornvale-species = { path = "../../domains/species" }
hornvale-language = { path = "../../domains/language" }
serde = { workspace = true }
serde_json = { workspace = true }
