[package]
name = "hornvale-locale"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale locale window: a RoomAddr rendered as an observable place."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-worldgen = { path = "../worldgen" }
hornvale-climate = { path = "../../domains/climate" }
hornvale-terrain = { path = "../../domains/terrain" }
serde = { workspace = true }
serde_json = { workspace = true }
