[package]
name = "hornvale-vessel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hornvale vessel window: possess an agent and walk the frozen world."

[dependencies]
hornvale-kernel = { path = "../../kernel" }
hornvale-worldgen = { path = "../worldgen" }
hornvale-locale = { path = "../locale" }
hornvale-historiography = { path = "../historiography" }
hornvale-book = { path = "../book" }
hornvale-language = { path = "../../domains/language" }
hornvale-settlement = { path = "../../domains/settlement" }
hornvale-species = { path = "../../domains/species" }
hornvale-astronomy = { path = "../../domains/astronomy" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hornvale-terrain = { path = "../../domains/terrain" }
